--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,4 +26,6 @@ jobs:
       uses: codecov/codecov-action@v4.0.1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+        fail_ci_if_error: true
+
 
